--- a/auth_proxy/templates/login.html
+++ b/auth_proxy/templates/login.html
@@ -6,5 +6,10 @@
 
  <body>
   <h1>Meower Login</h1>
+  <form method="POST">
+   <input type="text" name="email" placeholder="Email">
+   <input type="password" name="password">
+   <button type="submit">Send</button>
+  </form>
  </body>
 </html>
