--- a/auth_proxy/templates/login.html
+++ b/auth_proxy/templates/login.html
@@ -11,5 +11,6 @@
    <input type="password" name="password">
    <button type="submit">Send</button>
   </form>
+		<div>{{ error_msg }}</div>
  </body>
 </html>
