--- a/auth_proxy/templates/signup.html
+++ b/auth_proxy/templates/signup.html
@@ -7,6 +7,7 @@
  <body>
   <h1>Meower Signup</h1>
   <form method="POST">
+   <input type="text" name="account_name" placeholder="Account Name">
    <input type="email" name="email" placeholder="Email">
    <input type="email" name="email_confirm" placeholder="Email (Confirm)">
    <input type="password" name="password">
