feat: Add validations during signup

--- a/dev/system/auth_server/templates/signup.html
+++ b/dev/system/auth_server/templates/signup.html
@@ -7,8 +7,8 @@
  <body>
   <h1>Meower Signup</h1>
   <form method="POST">
-   <input type="text" name="account_name" placeholder="Account Name">
-   <input type="email" name="email" placeholder="Email">
+   <input type="text" name="user_account_name" placeholder="Account Name" value="{{ input.user_account_name }}">
+   <input type="email" name="email" placeholder="Email" value="{{ input.email }}">
    <input type="email" name="email_confirm" placeholder="Email (Confirm)">
    <input type="password" name="password">
    <input type="password" name="password_confirm">
