--- a/dev/system/auth_server/templates/login.html
+++ b/dev/system/auth_server/templates/login.html
@@ -7,7 +7,7 @@
  <body>
   <h1>Meower Login</h1>
   <form method="POST">
-   <input type="email" name="email" placeholder="Email">
+   <input type="email" name="email" placeholder="Email" value="{{ input.email }}">
    <input type="password" name="password">
    <button type="submit">Send</button>
   </form>
