--- a/dev/system/auth_server/templates/login.html
+++ b/dev/system/auth_server/templates/login.html
@@ -5,7 +5,7 @@
  </head>
 
  <body>
-  <h1>Meower Login</h1>
+  <h1>{{ i18n.get("auth_server.login.heading") }}</h1>
   <form method="POST">
    <input type="email" name="email" placeholder="Email" value="{{ input.email }}">
    <input type="password" name="password">
