--- a/dev/system/auth_server/templates/signup.html
+++ b/dev/system/auth_server/templates/signup.html
@@ -5,16 +5,31 @@
  </head>
 
  <body>
-  <h1>Meower Signup</h1>
+  <h1>{{ i18n.get("auth_server.signup.heading") }}</h1>
   <form method="POST">
-   <input type="text" name="user_account_name" placeholder="Account Name" value="{{ input.user_account_name }}">
-   <input type="email" name="email" placeholder="Email" value="{{ input.email }}">
-   <input type="email" name="email_confirm" placeholder="Email (Confirm)">
-   <input type="password" name="password">
-   <input type="password" name="password_confirm">
-   <button type="submit">Send</button>
+   <label>
+    <span>{{ i18n.get("auth_server.signup.form.user_account_name.label") }}</span>
+    <input type="text" name="user_account_name" placeholder="{{ i18n.get("auth_server.signup.form.user_account_name.placeholder") }}" value="{{ input.user_account_name }}">
+   </label>
+   <label>
+    <span>{{ i18n.get("auth_server.signup.form.email.label") }}</span>
+    <input type="email" name="email" placeholder="{{ i18n.get("auth_server.signup.form.email.placeholder") }}" value="{{ input.email }}">
+   </label>
+   <label>
+    <span>{{ i18n.get("auth_server.signup.form.email_confirm.label") }}</span>
+    <input type="email" name="email_confirm" placeholder="{{ i18n.get("auth_server.signup.form.email_confirm.placeholder") }}">
+   </label>
+   <label>
+    <span>{{ i18n.get("auth_server.signup.form.password.label") }}</span>
+    <input type="password" name="password">
+   </label>
+   <label>
+    <span>{{ i18n.get("auth_server.signup.form.password_confirm.label") }}</span>
+    <input type="password" name="password_confirm">
+   </label>
+   <button type="submit">{{ i18n.get("auth_server.signup.form.button.send") }}</button>
   </form>
-  <a href="/login">Login</a>
+  <a href="/login">{{ i18n.get("auth_server.signup.button.login") }}</a>
 
   {% for error in errors %}
    <div>{{ error }}</div>
