--- a/dev/system/auth_server/templates/login.html
+++ b/dev/system/auth_server/templates/login.html
@@ -1,26 +1,21 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <link rel="stylesheet" href="/_assets/style.css" />
- </head>
+{% extends "common/base.html" %}
 
- <body>
-  <h1>{{ i18n.get("auth_server.login.heading") }}</h1>
-  <form method="POST">
-   <label>
-    <span>{{ i18n.get("auth_server.login.form.email.label") }}</span>
-    <input type="email" name="email" placeholder="{{ i18n.get("auth_server.login.form.email.placeholder") }}" value="{{ input.email }}">
-   </label>
-   <label>
-    <span>{{ i18n.get("auth_server.login.form.password.label") }}</span>
-    <input type="password" name="password">
-   </label>
-   <button type="submit">{{ i18n.get("auth_server.login.form.button.send") }}</button>
-  </form>
-  <a href="/signup">{{ i18n.get("auth_server.login.button.signup") }}</a>
-
-  {% for error in errors %}
-   <div>{{ error }}</div>
-  {% endfor %}
- </body>
-</html>
+{% block content %}
+ <h1>{{ i18n.get("auth_server.login.heading") }}</h1>
+ <form method="POST">
+  <label>
+   <span>{{ i18n.get("auth_server.login.form.email.label") }}</span>
+   <input type="email" name="email" placeholder="{{ i18n.get("auth_server.login.form.email.placeholder") }}" value="{{ input.email }}">
+  </label>
+  <label>
+   <span>{{ i18n.get("auth_server.login.form.password.label") }}</span>
+   <input type="password" name="password">
+  </label>
+  <button type="submit">{{ i18n.get("auth_server.login.form.button.send") }}</button>
+ </form>
+ <a href="/auth/signup">{{ i18n.get("auth_server.login.button.signup") }}</a>
+ 
+ {% for error in errors %}
+  <div>{{ error }}</div>
+ {% endfor %}
+{% endblock %}
