--- a/dev/system/auth_server/templates/signup_success.html
+++ b/dev/system/auth_server/templates/signup_success.html
@@ -3,5 +3,5 @@
 {% block content %}
  <h1>{{ i18n.get("auth_server.signup_success.heading") }}</h1>
  <p>{{ i18n.get("auth_server.signup_success.next") }}</p>
- <button>{{ i18n.get("auth_server.signup_success.button.login") }}</button>
+ <a href="/auth/login">{{ i18n.get("auth_server.signup_success.button.login") }}</a>
 {% endblock %}
