feat: Implement resending of authentication code
- Abstract field hashing and verification into a trait for the model class

--- a/dev/system/auth_server/templates/login.html
+++ b/dev/system/auth_server/templates/login.html
@@ -14,6 +14,7 @@
   <button type="submit">{{ i18n.get("auth_server.login.form.button.send") }}</button>
  </form>
  <a href="/auth/signup">{{ i18n.get("auth_server.login.button.signup") }}</a>
+ <a href="/auth/resend_verify_code">{{ i18n.get("auth_server.login.button.resend_verify_code") }}</a>
  
  {% for error in errors %}
   <div>{{ error }}</div>
