--- a/dev/system/auth_server/templates/signup.html
+++ b/dev/system/auth_server/templates/signup.html
@@ -22,6 +22,7 @@
   <button type="submit">{{ i18n.get("auth_server.signup.form.button.send") }}</button>
  </form>
  <a href="/auth/login">{{ i18n.get("auth_server.signup.button.login") }}</a>
+ <a href="/auth/resend_verify_code">{{ i18n.get("auth_server.signup.button.resend_verify_code") }}</a>
 
  {% for error in errors %}
   <div>{{ error }}</div>
