--- a/dev/system/auth_server/templates/common/base.html
+++ b/dev/system/auth_server/templates/common/base.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="/_assets/style.css" />
  </head>
 
- <body>
+ <body class="body">
   {% call header::render() %}
-  <main>
+  <main class="wrapper theme_default">
    {% block content %}{% endblock %}
   </main>
   {% call footer::render() %}
