--- a/dev/system/assets/scss/theme.scss
+++ b/dev/system/assets/scss/theme.scss
@@ -34,9 +34,9 @@
 
 
 //------------------------------------------------------------------------------
-//	Light Theme.
+//	Default Theme.
 //------------------------------------------------------------------------------
-.theme_light
+.theme_default
 {
 	//	Logo.
 	--logo-icon: url("./public/icon_light.svg");
@@ -45,32 +45,32 @@
 	--color-common-black: #000;
 	--color-common-white: #fff;
 
-	--color-primary: #008080;
-	--color-primary-light: #5f9ea0;
-	--color-primary-dark: #2f4f4f;
+	--color-primary: #5d4037;
+	--color-primary-light: #a1887f;
+	--color-primary-dark: #3e2723;
 	--color-primary-text: #fff;
 
-	--color-secondary: #9c27b0;
-	--color-secondary-light: #ba68c8;
-	--color-secondary-dark: #7b1fa2;
+	--color-secondary: #455a64;
+	--color-secondary-light: #90a4ae;
+	--color-secondary-dark: #263238;
 	--color-secondary-text: #fff;
 
 	--color-error: #d32f2f;
-	--color-error-light: #ef5350;
-	--color-error-dark: #c62828;
+	--color-error-light: #ffcdd2;
+	--color-error-dark: #b71c1c;
 	--color-error-text: #fff;
 
-	--color-warn: #ed6c02;
-	--color-warn-light: #ff9800;
-	--color-warn-dark: #e65100;
+	--color-warn: #ffa000;
+	--color-warn-light: #ffc107;
+	--color-warn-dark: #ff6f00;
 	--color-warn-text: #fff;
 
-	--color-info: #0288d1;
-	--color-info-light: #03a9f4;
-	--color-info-dark: #01579b;
+	--color-info: #1976d2;
+	--color-info-light: #2196f3;
+	--color-info-dark: #0d47a1;
 	--color-info-text: #fff;
 
-	--color-success: #2e7d32;
+	--color-success: #388e3c;
 	--color-success-light: #4caf50;
 	--color-success-dark: #1b5e20;
 	--color-success-text: #fff;
@@ -105,79 +105,4 @@
 	--shadow-weak: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	--shadow-strong: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
 	--shadow-inset: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
-}
-
-
-//------------------------------------------------------------------------------
-//	Dark Theme.
-//------------------------------------------------------------------------------
-.theme_dark
-{
-	//	Logo.
-	--logo-icon: url("./public/icon_dark.svg");
-
-	//	Colors.
-	--color-common-black: #000;
-	--color-common-white: #fff;
-
-	--color-primary: #b0c4de;
-	--color-primary-light: #e3f2fd;
-	--color-primary-dark: #42a5f5;
-	--color-primary-text: #333;
-
-	--color-secondary: #3366ff;
-	--color-secondary-light: #6699ff;
-	--color-secondary-dark: #0033ff;
-	--color-secondary-text: #fff;
-
-	--color-error: #f44336;
-	--color-error-light: #e57373;
-	--color-error-dark: #d32f2f;
-	--color-error-text: #fff;
-
-	--color-warn: #ffa726;
-	--color-warn-light: #ffb74d;
-	--color-warn-dark: #f57c00;
-	--color-warn-text: #fff;
-
-	--color-info: #29b6f6;
-	--color-info-light: #4fc3f7;
-	--color-info-dark: #0288d1;
-	--color-info-text: #fff;
-
-	--color-success: #66bb6a;
-	--color-success-light: #81c784;
-	--color-success-dark: #388e3c;
-	--color-success-text: #fff;
-
-	--color-gray-50: #fafafa;
-	--color-gray-100: #f5f5f5;
-	--color-gray-200: #eeeeee;
-	--color-gray-300: #e0e0e0;
-	--color-gray-400: #bdbdbd;
-	--color-gray-500: #9e9e9e;
-	--color-gray-600: #757575;
-	--color-gray-700: #616161;
-	--color-gray-800: #424242;
-	--color-gray-900: #212121;
-	--color-gray-a100: #f5f5f5;
-	--color-gray-a200: #eeeeee;
-	--color-gray-a400: #bdbdbd;
-	--color-gray-a700: #616161;
-
-	--color-text-primary: #fff;
-	--color-text-secondary: rgba(#fff, 0.7);
-	--color-text-disabled: rgba(#fff, 0.5);
-
-	--color-bg: #222;
-	--color-panel: #27374D;
-
-	//	Border style.
-	--border: 1px solid #999999;
-
-	//	Shadows.
-	--shadow: none;
-	--shadow-weak: none;
-	--shadow-strong: none;
-	--shadow-inset: none;
 }
