--- a/dev/system/auth_server/templates/signup.html
+++ b/dev/system/auth_server/templates/signup.html
@@ -1,30 +1,35 @@
 {% extends "common/base.html" %}
 
 {% block content %}
- <h1>{{ i18n.get("auth_server.signup.heading") }}</h1>
- <form method="POST">
-  <label>
-   <span>{{ i18n.get("auth_server.signup.form.email.label") }}</span>
-   <input type="email" name="email" placeholder="{{ i18n.get("auth_server.signup.form.email.placeholder") }}" value="{{ input.email }}">
-  </label>
-  <label>
-   <span>{{ i18n.get("auth_server.signup.form.email_confirm.label") }}</span>
-   <input type="email" name="email_confirm" placeholder="{{ i18n.get("auth_server.signup.form.email_confirm.placeholder") }}">
-  </label>
-  <label>
-   <span>{{ i18n.get("auth_server.signup.form.password.label") }}</span>
-   <input type="password" name="password">
-  </label>
-  <label>
-   <span>{{ i18n.get("auth_server.signup.form.password_confirm.label") }}</span>
-   <input type="password" name="password_confirm">
-  </label>
-  <button type="submit">{{ i18n.get("auth_server.signup.form.button.send") }}</button>
- </form>
- <a href="/auth/login">{{ i18n.get("auth_server.signup.button.login") }}</a>
- <a href="/auth/resend_verify_code">{{ i18n.get("auth_server.signup.button.resend_verify_code") }}</a>
-
- {% for error in errors %}
-  <div>{{ error }}</div>
- {% endfor %}
+ <h1 class="ui_heading">{{ i18n.get("auth_server.signup.heading") }}</h1>
+ <div class="ui_panel sm shadow radius padding_xl margin_lg flex column align_center gap_md">
+  <form method="POST" class="flex column align_center gap_md full_horizon">
+   <label class="flex column gap_sm full_horizon">
+    <span class="ui_label">{{ i18n.get("auth_server.signup.form.email.label") }}</span>
+    <input type="email" name="email" placeholder="{{ i18n.get("auth_server.signup.form.email.placeholder") }}" value="{{ input.email }}" class="ui_text">
+   </label>
+   <label class="flex column gap_sm full_horizon">
+    <span class="ui_label">{{ i18n.get("auth_server.signup.form.email_confirm.label") }}</span>
+    <input type="email" name="email_confirm" placeholder="{{ i18n.get("auth_server.signup.form.email_confirm.placeholder") }}" class="ui_text">
+   </label>
+   <label class="flex column gap_sm full_horizon">
+    <span class="ui_label">{{ i18n.get("auth_server.signup.form.password.label") }}</span>
+    <input type="password" name="password" class="ui_text">
+   </label>
+   <label class="flex column gap_sm full_horizon">
+    <span class="ui_label">{{ i18n.get("auth_server.signup.form.password_confirm.label") }}</span>
+    <input type="password" name="password_confirm" class="ui_text">
+   </label>
+   {% if errors.len() > 0 %}
+    <div class="errors full_horizon">
+     {% for error in errors %}
+      <div>{{ error }}</div>
+     {% endfor %}
+    </div>
+   {% endif %}
+   <button type="submit" class="ui_button primary full_horizon">{{ i18n.get("auth_server.signup.form.button.send") }}</button>
+  </form>
+  <a href="/auth/login" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.signup.button.login") }}</a>
+  <a href="/auth/resend_verify_code" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.signup.button.resend_verify_code") }}</a>
+ </div>
 {% endblock %}
