--- a/dev/system/auth_server/templates/signup_success.html
+++ b/dev/system/auth_server/templates/signup_success.html
@@ -1,7 +1,9 @@
 {% extends "common/base.html" %}
 
 {% block content %}
- <h1>{{ i18n.get("auth_server.signup_success.heading") }}</h1>
- <p>{{ i18n.get("auth_server.signup_success.next") }}</p>
- <a href="/auth/login">{{ i18n.get("auth_server.signup_success.button.login") }}</a>
+ <h1 class="ui_heading">{{ i18n.get("auth_server.signup_success.heading") }}</h1>
+ <div class="ui_panel sm shadow radius padding_xl margin_lg flex column align_center gap_md">
+  <p>{{ i18n.get("auth_server.signup_success.next") }}</p>
+  <a href="/auth/login" class="ui_button primary full_horizon">{{ i18n.get("auth_server.signup_success.button.login") }}</a>
+ </div>
 {% endblock %}
