--- a/dev/system/auth_server/templates/signup.html
+++ b/dev/system/auth_server/templates/signup.html
@@ -29,6 +29,7 @@
    {% endif %}
    <button type="submit" class="ui_button primary full_horizon">{{ i18n.get("auth_server.signup.form.button.send") }}</button>
   </form>
+  <hr class="ui_panel border full_horizon">
   <a href="/auth/login" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.signup.button.login") }}</a>
   <a href="/auth/resend_verify_code" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.signup.button.resend_verify_code") }}</a>
  </div>
