--- a/dev/system/auth_server/templates/resend_verify_code.html
+++ b/dev/system/auth_server/templates/resend_verify_code.html
@@ -21,6 +21,7 @@
    {% endif %}
    <button type="submit" class="ui_button primary full_horizon">{{ i18n.get("auth_server.resend_verify_code.form.button.send") }}</button>
   </form>
+  <hr class="ui_panel border full_horizon">
   <a href="/auth/login" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.resend_verify_code.button.login") }}</a>
   <a href="/auth/signup" class="ui_button primary_light full_horizon">{{ i18n.get("auth_server.resend_verify_code.button.signup") }}</a>
  </div>
