--- a/dev/system/layer/auth/templates/login.html
+++ b/dev/system/layer/auth/templates/login.html
@@ -7,18 +7,17 @@
    <label class="flex column gap_sm full_horizon">
     <span class="ui_label">{{ t!("pages.login.form.email.label") }}</span>
     <input type="email" name="email" placeholder="{{ t!("pages.login.form.email.placeholder") }}" value="{{ input.email }}" class="ui_text">
+    {% if input_error.email.is_some() %}
+     <div class="ui_error">{{ input_error.email.as_ref().unwrap() }}</div>
+    {% endif %}
    </label>
    <label class="flex column gap_sm full_horizon">
     <span class="ui_label">{{ t!("pages.login.form.password.label") }}</span>
     <input type="password" name="password" class="ui_text">
+    {% if input_error.password.is_some() %}
+     <div class="ui_error">{{ input_error.password.as_ref().unwrap() }}</div>
+    {% endif %}
    </label>
-   {% if errors.len() > 0 %}
-    <div class="errors full_horizon">
-     {% for error in errors %}
-      <div>{{ error }}</div>
-     {% endfor %}
-    </div>
-   {% endif %}
    <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.login.form.button.send") }}</button>
   </form>
   <hr class="ui_panel border full_horizon">
