--- a/dev/system/layer/auth/templates/login.html
+++ b/dev/system/layer/auth/templates/login.html
@@ -18,7 +18,7 @@
      <div class="ui_error">{{ input_error.password.as_ref().unwrap() }}</div>
     {% endif %}
    </label>
-   <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.login.form.button.send") }}</button>
+   <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.login.form.button.submit") }}</button>
   </form>
   <hr class="ui_panel border full_horizon">
   <a href="/auth/signup" class="ui_button primary_light full_horizon">{{ t!("pages.login.button.signup") }}</a>
