--- a/dev/system/layer/auth/templates/verify_code.html
+++ b/dev/system/layer/auth/templates/verify_code.html
@@ -5,8 +5,9 @@
  <div class="ui_panel sm shadow radius padding_xl margin_lg flex column align_center gap_md">
   <form method="POST" action="/auth/verify_code" class="flex column align_center gap_md full_horizon">
    <input type="hidden" name="token" value="{{ token }}">
+   <span>{{ t!("pages.verify_code.form.caution") }}</span>
    <label class="flex column gap_sm full_horizon">
-    <span class="ui_label">{{ t!("pages.verify_code.form.code") }}</span>
+    <span class="ui_label">{{ t!("pages.verify_code.form.code.label") }}</span>
     <input type="text" name="code" class="ui_text">
     {% if input_error.code.is_some() %}
      <div class="ui_error">{{ input_error.code.as_ref().unwrap() }}</div>
