feat: Implement password reset flow

--- a/dev/system/layer/auth/templates/forgot_password.html
+++ b/dev/system/layer/auth/templates/forgot_password.html
@@ -14,7 +14,7 @@
    {% if input_error.other.is_some() %}
     <div class="ui_error">{{ input_error.other.as_ref().unwrap() }}</div>
    {% endif %}
-   <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.forgot_password.form.button.send") }}</button>
+   <button type="submit" class="ui_button primary full_horizon">{{ t!("pages.forgot_password.form.button.submit") }}</button>
   </form>
   <hr class="ui_panel border full_horizon">
   <a href="/auth/login" class="ui_button primary_light full_horizon">{{ t!("pages.forgot_password.button.login") }}</a>
