--- a/dev/system/layer/auth/templates/common/base.html
+++ b/dev/system/layer/auth/templates/common/base.html
@@ -4,7 +4,8 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <link rel="stylesheet" href="/_assets/style.css" />
+  <link rel="stylesheet" href="/auth/assets/css/reset.css" />
+  <link rel="stylesheet" href="/auth/assets/css/style.css" />
  </head>
 
  <body>
