chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/common/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/common/index.scss
@@ -2,4 +2,6 @@
 //	Common styles
 //------------------------------------------------------------------------------
 
-@forward 'box';
+@forward "flex";
+@forward "spacer";
+@forward "typography";
