--- a/dev/proto/ui_catalog/assets/scss/components/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/index.scss
@@ -1,3 +1,6 @@
 //------------------------------------------------------------------------------
 //	Component styles
 //------------------------------------------------------------------------------
+
+@forward "box";
+@forward "heading";
