--- a/dev/proto/ui_catalog/assets/scss/style.scss
+++ b/dev/proto/ui_catalog/assets/scss/style.scss
@@ -2,6 +2,7 @@
 //	Style
 //------------------------------------------------------------------------------
 
+@use "reset";
 @use "common/index" as common;
 @use "components/index" as components;
 @use "themes/index" as themes;
