--- a/dev/proto/ui_catalog/assets/scss/themes/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/index.scss
@@ -2,4 +2,4 @@
 //	Theme configuration
 //------------------------------------------------------------------------------
 
-@forward "dark";
+@forward "meower_light";
