--- a/dev/proto/ui_catalog/assets/scss/variables/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/index.scss
@@ -3,4 +3,6 @@
 //------------------------------------------------------------------------------
 
 @forward "colors";
+@forward "fonts";
 @forward "sizes";
+@forward "spaces";
