--- a/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
@@ -1,5 +1,10 @@
 //------------------------------------------------------------------------------
 //	Common Sizes
+//
+//
+//	# Used by
+//
+//	- component/box.scss
 //------------------------------------------------------------------------------
 
 :root
@@ -17,4 +22,7 @@
 	--size-3xl: 64px;
 	--size-4xl: 72px;
 	--size-5xl: 80px;
+	--size-6xl: 160px;
+	--size-7xl: 320px;
+	--size-8xl: 480px;
 }
