chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/variables/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/index.scss
@@ -1,8 +1,15 @@
 //------------------------------------------------------------------------------
 //	Variables definition
+//
+//
+//	# Overwride variables
+//
+//	Creates a new theme file in `assets/scss/themes` and adjust the style by
+//	overriding each custom property.
 //------------------------------------------------------------------------------
 
 @forward "colors";
 @forward "fonts";
 @forward "sizes";
 @forward "spaces";
+@forward "radii";
