--- a/dev/proto/ui_catalog/assets/scss/components/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/index.scss
@@ -3,4 +3,5 @@
 //------------------------------------------------------------------------------
 
 @forward "box";
+@forward "button";
 @forward "heading";
