chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/components/button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/button.scss
@@ -1,5 +1,12 @@
 //------------------------------------------------------------------------------
 //	UI button
+//
+//
+//	# Usage
+//
+//	```html
+//	<button class="ui_button primary outlined large">Button</button>
+//	```
 //------------------------------------------------------------------------------
 
 .ui_button
