--- a/dev/proto/ui_catalog/assets/scss/themes/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/themes/index.scss
@@ -3,3 +3,4 @@
 //------------------------------------------------------------------------------
 
 @forward "meower_light";
+@forward "meower_dark";
