feat: Add floating button component

--- a/dev/proto/ui_catalog/assets/scss/components/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/index.scss
@@ -6,4 +6,6 @@
 @forward "button";
 @forward "button_group";
 @forward "checkbox";
+@forward "floating_button";
 @forward "heading";
+@forward "icon";
