--- a/dev/proto/ui_catalog/assets/scss/variables/index.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/index.scss
@@ -11,6 +11,8 @@
 @forward "colors";
 @forward "fonts";
 @forward "icons";
+@forward "opacities";
+@forward "shadows";
 @forward "sizes";
 @forward "spaces";
 @forward "radii";
