--- a/dev/proto/ui_catalog/assets/scss/variables/radii.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/radii.scss
@@ -1,5 +1,5 @@
 //------------------------------------------------------------------------------
-//	Common Radii
+//	Common radii
 //------------------------------------------------------------------------------
 
 :root
@@ -15,4 +15,6 @@
 	--radius-3xl: 16px;
 	--radius-4xl: 18px;
 	--radius-5xl: 20px;
+
+	--radius-circle: 99999px;
 }
