--- a/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/sizes.scss
@@ -1,10 +1,5 @@
 //------------------------------------------------------------------------------
-//	Common Sizes
-//
-//
-//	# Used by
-//
-//	- component/box.scss
+//	Common sizes
 //------------------------------------------------------------------------------
 
 :root
