--- a/dev/proto/ui_catalog/assets/scss/variables/spaces.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/spaces.scss
@@ -1,11 +1,5 @@
 //------------------------------------------------------------------------------
-//	Common Spaces
-//
-//
-//	# Used by
-//
-//	- common/flex.scss
-//	- common/spacer.scss
+//	Common spaces
 //------------------------------------------------------------------------------
 
 :root
