--- a/dev/proto/ui_catalog/assets/scss/components/button.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/button.scss
@@ -15,6 +15,7 @@
 	border-radius: var(--radius-sm);
 	padding: var(--spacing-sm) var(--spacing-lg);
 	cursor: pointer;
+	transition: opacity 0.3s 0s ease-in-out;
 
 
 	//--------------------------------------------------------------------------
@@ -158,7 +159,7 @@
 
 	&.full_rounded
 	{
-		border-radius: 99999px;
+		border-radius: var(--radius-circle);
 	}
 
 	&.no_rounded
@@ -173,7 +174,7 @@
 
 	&:hover
 	{
-		opacity: 0.7;
+		opacity: var(--opacity-hover);
 	}
 
 	&:disabled
@@ -196,7 +197,7 @@
 
 		&:hover
 		{
-			opacity: 1;
+			opacity: var(--opacity-100);
 		}
 	}
 }
