--- a/dev/proto/ui_catalog/assets/scss/components/button_group.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/button_group.scss
@@ -24,6 +24,7 @@
 		display: inline-block;
 		padding: var(--spacing-sm) var(--spacing-lg);
 		cursor: pointer;
+		transition: opacity 0.3s 0s ease-in-out;
 
 		&:first-child
 		{
@@ -320,7 +321,7 @@
 	{
 		&:hover
 		{
-			opacity: 0.7;
+			opacity: var(--opacity-hover);
 		}
 
 		&:disabled
@@ -331,7 +332,7 @@
 
 			&:hover
 			{
-				opacity: 1;
+				opacity: var(--opacity-100);
 			}
 		}
 	}
