--- a/dev/proto/ui_catalog/assets/scss/variables/fonts.scss
+++ b/dev/proto/ui_catalog/assets/scss/variables/fonts.scss
@@ -1,5 +1,5 @@
 //------------------------------------------------------------------------------
-//	Common Fonts
+//	Common fonts
 //------------------------------------------------------------------------------
 
 :root
