chore: Update UI catalog

--- a/dev/proto/ui_catalog/assets/scss/components/checkbox.scss
+++ b/dev/proto/ui_catalog/assets/scss/components/checkbox.scss
@@ -1,5 +1,5 @@
 //------------------------------------------------------------------------------
-//	UI button group
+//	UI checkbox
 //
 //
 //	# Usage
